@@ -42,6 +42,13 @@
 
 /* #define MEMTRACE */
 
+/* needed for Solaris */
+#ifndef SUN_LEN
+# define SUN_LEN(ptr) ((size_t) (((struct sockaddr_un *) 0)->sun_path) \
+  + strlen ((ptr)->sun_path))
+#endif
+
+
 /* forward declaration */
 const char *GWEN_InetAddr_ErrorString(int c);
 
